packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
.ll-layer-switcher {
    display: flex;
    overflow-x: auto;
    flex-wrap: nowrap;
    position: relative;
    z-index: 1;
    user-select: none;
    width: fit-content;
    max-width: 100%;
    pointer-events: auto;
    gap: .5rem;
    // paddingTop : 2px for outline
    padding: 2px .5rem .5rem .5rem;

    .ll-modal-overlay {
        z-index: auto;
    }

    .separator {
        width: .25rem;
        flex: 0 0 .25rem;
        margin: 1rem 0;
        background-color: var(--background-default);
        border-radius: 3px;
        position: relative;
    }

    .filters {

        .ll-button {
            padding: .25rem .5rem;
            flex: 1;
        }
    }

    .ll-button.layer {
        width: calc(90px + .5rem);
        flex: 0 0 calc(90px + .5rem);
        border-radius: var(--border-radius-sm);
        display: flex;
        flex-direction: column;
        padding: .25rem .25rem 0;
        background-color: var(--background-default);
        position: relative;
        color: var(--text-default);

        .preview-container {
            width: 100%;
        }

        @media (max-width: 700px) {
            &.principal {
                padding: .25rem;

                width: 3.5rem;
                height: 3.5rem;
                flex: 0 0 3.5rem;

                .preview-container {
                    height: 100%;
                    overflow: hidden;
                }

                .preview {
                    width: 90px;
                    height: 54px;
                    max-width: none;
                }

                .legend {
                    display: none;
                }
            }
        }

        &.base {
            &:hover {
                background-color: var(--color-primary);
            }

            &.active {
                background-color: var(--color-primary);

                &:hover {
                    background-color: var(--color-primary-700);
                }
            }
        }

        &.optional {
            &:hover {
                background-color: var(--color-primary-200);
            }

            &.active {
                background-color: var(--color-primary-200);

                &:hover {
                    background-color: var(--color-primary-500);
                }
            }
        }

    }

    .type {
        position: absolute;
        top: 2px;
        left: 2px;
    }

    .preview {
        width: 100%;
        height: 54px;
        object-fit: cover;
    }

    .legend {
        overflow: hidden;
        text-align: center;
        max-height: 2.5rem;
        text-overflow: ellipsis;
        line-height: 1.25rem;
    }
}

